--- a/FlexBoxTop10/style.css
+++ b/FlexBoxTop10/style.css
@@ -3,7 +3,7 @@ h1{
   text-align: center;
 }
 html{
-  background-color: #123456
+  background-color: #123456;
 }
 
 header {
@@ -32,6 +32,44 @@ footer{
   font-family: Comic Sans Ms;
   font-size: 10px;
   color: beige;
+}
+
+
+.flex-container{
+  height: 225vh;
+  width: 100vw;
+  display: flex;
+}
+.flex-header{
+  height: 40px;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.flexbox-content{
+height: 225vh;
+width: 50vw;
+display: flex;
+
+
+}
+.flexbox-image{
+height: 225vh;
+width: 50vw;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+align-items: center;
+}
+
+.flexbox-footer{
+  height: 20px;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 a:link {
   color: beige;
